Update: 弃用ThinkPHP框架，支持PHP7

--- a/doc/nginx/daily.bikethru.com.conf
+++ b/doc/nginx/daily.bikethru.com.conf
@@ -1,24 +1,21 @@
 server {
-    listen      80 default;
+    listen      80 default_server;
     server_name daily.bikethru.com;
 	root        /var/www/zhihu-daily;
 
-    # 首页跳转
-    rewrite ^/$ /news redirect;
+    # 页面
+    rewrite ^/([a-z]+)?$ /index.php?c=$1 last;
 
-    # ThinkPHP路径rewrite模式
-    location /news  {
-        if (!-e $request_filename) {
-            rewrite ^(.*)$ /index.php?s=$1 last;
+    # 图片代理
+    rewrite ^/img/(.*)$ /img.php?url=$1 last;
+
+    # 静态文件
+    location ~ /static {
+        if (-f $request_filename) {
+            expires 1h;
             break;
         }
-        index index.php;
     }
-
-    # image代理
-    location ~ ^/img/ {
-        rewrite ^/img/(.*)$ /img.php?url=$1 last;
-	}
 
     location ~* \img.php$ {
         # fastcgi_cache的配置
